--- a/html/apartmani.html
+++ b/html/apartmani.html
@@ -42,10 +42,10 @@
         <section class="apartments">
             <div class="apartments-container">
                 <div class="container-wraper">
-                    <div class="apartments-container-item">
+                    <div class="apartments-container-item apartment-item">
                         <a href="apartmani/superior.html" class="apartment-image">
                             <img src="../images/apartment1.png" alt="">
-                            <div class="apartment-content-overlay">
+                            <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Superior</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
@@ -54,10 +54,10 @@
                             </div>
                         </a>
                     </div>
-                    <div class="apartments-container-item">
+                    <div class="apartments-container-item apartment-item">
                         <a href="apartmani/standard.html" class="apartment-image">
                             <img src="../images/apartment1.png" alt="">
-                            <div class="apartment-content-overlay">
+                            <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Standard</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
@@ -66,10 +66,10 @@
                             </div>
                         </a>
                     </div>
-                    <div class="apartments-container-item">
+                    <div class="apartments-container-item apartment-item">
                         <a href="apartmani/studio.html" class="apartment-image">
                             <img src="../images/apartment1.png" alt="">
-                            <div class="apartment-content-overlay">
+                            <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Studio</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
