--- a/html/galerija.html
+++ b/html/galerija.html
@@ -25,7 +25,7 @@
                     <a href="#" style="color:#b99b55">RS</a>
                 </div>
                 <div class="booking-section">
-                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezervisi</a>
+                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezerviši</a>
                     <p class="best-rate txt-caps">Garancija najbolje cene</p>
                 </div>
             </div>
@@ -94,9 +94,9 @@
     <footer>
         <div class="footer-top">
             <div class="footer-top-left">
-                <p>OSTANIMO U KONTAKTU</p>
-                <p>PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
-                <div class="social-networks">
+                <p class="fnt-w-b">OSTANIMO U KONTAKTU</p>
+                <p class="mt">PODELITE SVOJE BONANZA ISKUSTVO</p>
+                <div class="social-networks mt">
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
@@ -105,17 +105,17 @@
             <div class="footer-top-right">
                 <div class="line"></div>
                 <div class="email-form">
-                    <p>PRIDRUŽITE SE KLUBU MENEGHETTI</p>
-                    <p>PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
+                    <p class="fnt-w-b">PRIDRUŽITE SE KLUBU BONANZA</p>
+                    <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠĆENIM CENAMA!</p>
                     <form action="post" target="_blank">
-                        <input type="text" placeholder="Email">
-                        <button type="submit">Pridruzi se klubu!</button>
+                        <input class="mt" type="text" placeholder="Email">
+                        <button class="btn mt" type="submit">Pridruži se klubu!</button>
                     </form>
                 </div>
             </div>
         </div>
         <div class="footer-down">
-            <p>Sva prava zadrzana </p>
+            <p>Sva prava zadržana</p>
         </div>
     </footer>
 </body>
