--- a/html/apartmani/studio.html
+++ b/html/apartmani/studio.html
@@ -109,9 +109,9 @@
     <footer>
         <div class="footer-top">
             <div class="footer-top-left">
-                <p>OSTANIMO U KONTAKTU</p>
-                <p>PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
-                <div class="social-networks">
+                <p class="fnt-w-b">OSTANIMO U KONTAKTU</p>
+                <p class="mt">PODELITE SVOJE BONANZA ISKUSTVO</p>
+                <div class="social-networks mt">
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-youtube"></i></a>
@@ -120,17 +120,17 @@
             <div class="footer-top-right">
                 <div class="line"></div>
                 <div class="email-form">
-                    <p>PRIDRUŽITE SE KLUBU MENEGHETTI</p>
-                    <p>PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
+                    <p class="fnt-w-b">PRIDRUŽITE SE KLUBU BONANZA</p>
+                    <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠĆENIM CENAMA!</p>
                     <form action="post" target="_blank">
-                        <input type="text" placeholder="Email">
-                        <button type="submit">Pridruzi se klubu!</button>
+                        <input class="mt" type="text" placeholder="Email">
+                        <button class="btn mt" type="submit">Pridruži se klubu!</button>
                     </form>
                 </div>
             </div>
         </div>
         <div class="footer-down">
-            <p>Sva prava zadrzana </p>
+            <p>Sva prava zadržana</p>
         </div>
     </footer>
 </body>
