--- a/index.html
+++ b/index.html
@@ -110,32 +110,32 @@
             </div>
         </section>
     </main>
-        <footer>
-            <div class="footer-top">
-                <div class="footer-top-left">
-                    <p class="fnt-w-b">OSTANIMO U KONTAKTU</p>
-                    <p class="mt">PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
-                    <div class="social-networks mt">
-                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                    </div>
-                </div>
-                <div class="footer-top-right">
-                    <div class="line"></div>
-                    <div class="email-form">
-                        <p class="fnt-w-b">PRIDRUŽITE SE KLUBU MENEGHETTI</p>
-                        <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
-                        <form action="post" target="_blank">
-                            <input class="mt" type="text" placeholder="Email">
-                            <button type="submit" class="btn mt">Pridruzi se klubu!</button>
-                        </form>
-                    </div>
+    <footer>
+        <div class="footer-top">
+            <div class="footer-top-left">
+                <p class="fnt-w-b">OSTANIMO U KONTAKTU</p>
+                <p class="mt">PODELITE SVOJE BONANZA ISKUSTVO</p>
+                <div class="social-networks mt">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 </div>
             </div>
-            <div class="footer-down">
-                <p>Sva prava zadrzana </p>
+            <div class="footer-top-right">
+                <div class="line"></div>
+                <div class="email-form">
+                    <p class="fnt-w-b">PRIDRUŽITE SE KLUBU BONANZA</p>
+                    <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠĆENIM CENAMA!</p>
+                    <form action="post" target="_blank">
+                        <input class="mt" type="text" placeholder="Email">
+                        <button class="btn mt" type="submit">Pridruži se klubu!</button>
+                    </form>
+                </div>
             </div>
-        </footer>
+        </div>
+        <div class="footer-down">
+            <p>Sva prava zadržana</p>
+        </div>
+    </footer>
 </body>
 </html>
