--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <p class="apartment-title">Superior</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
-                                    <p>Pogledaj</p>
+                                    <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
                         </a>
@@ -89,7 +89,7 @@
                                 <p class="apartment-title">Standard</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
-                                    <p>Pogledaj</p>
+                                    <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
                         </a>
@@ -101,7 +101,7 @@
                                 <p class="apartment-title">Studio</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
-                                    <p>Pogledaj</p>
+                                    <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
                         </a>
