--- a/html/apartmani.html
+++ b/html/apartmani.html
@@ -49,7 +49,7 @@
                                 <p class="apartment-title">Superior</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
-                                    <p>Pogledaj</p>
+                                    <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
                         </a>
@@ -61,7 +61,7 @@
                                 <p class="apartment-title">Standard</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
-                                    <p>Pogledaj</p>
+                                    <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
                         </a>
@@ -73,7 +73,7 @@
                                 <p class="apartment-title">Studio</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
-                                    <p>Pogledaj</p>
+                                    <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
                         </a>
