povezani svi headeri

--- a/html/apartmani/studio.html
+++ b/html/apartmani/studio.html
@@ -4,27 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../style.css">
-    <link rel="stylesheet" href="../../css/apartmani.css">
+    <link rel="stylesheet" href="../../css/hero.css">
     <link rel="icon" href="../../images/logo.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dbad9f8d2b.js" defer crossorigin="anonymous"></script>
-    <title>Apartmani | Bonanza | Apartments | Nis</title>
+    <title>Studio | Bonanza | Apartments | Nis</title>
 </head>
 <body>
-    <header id="header">
+    <header>
+        <div class="header-gradient"></div>
         <div class="upper-header">
-            <div class="logo"></div>
+            <div class="logo">
+                <a href="../../index.html" class="logo">
+                    <img style="width: 100px; height: 70px;" src="../../images/logo.jpg" alt="logo">
+                </a>
+            </div>
             <div class="booking">
                 <div class="language">
-                    <p>EN / RS</p>
+                    <a href="#">EN</a>
+                    <span>/</span>
+                    <a href="#" style="color:#b99b55">RS</a>
                 </div>
                 <div class="booking-section">
-                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezervisi</a>
-                    <p>GARANCIJA NAJBOLJE CENE</p>
+                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezerviši</a>
+                    <p class="best-rate txt-caps">Garancija najbolje cene</p>
                 </div>
             </div>
         </div>
         <nav class="nav-bar">
-            <ul class="nav-menu">
+            <ul class="nav-menu txt-caps fnt-w-l">
                 <li><a href="../apartmani.html">Apartmani</a></li>
                 <li><a href="../restorani.html">Restorani</a></li>
                 <li><a href="../galerija.html">Galerija</a></li>
@@ -33,6 +40,9 @@
         </nav>
     </header>
     <main>
+        <section class="hero">
+            <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/accommodation/hero/rooms-and-suites677748e.jpg" alt="">
+        </section>
         <section class="section about-us">'
             <div class="about">
                 <h1>Bonanza</h1>
