header gotov svuda

--- a/html/galerija/superior.html
+++ b/html/galerija/superior.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="../../css/apartmani.css">
     <link rel="icon" href="../../images/logo.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dbad9f8d2b.js" defer crossorigin="anonymous"></script>
     <title>Superior | Bonanza | Apartments | Nis</title>
 </head>
 <body>
     <header>
-        <div class="header-gradient"></div>
         <div class="upper-header">
             <div class="logo">
                 <a href="../../index.html" class="logo">
@@ -39,7 +39,7 @@
         </nav>
     </header>
     <main>
-        <section class="section gallery">
+        <section style="margin-top: 200px" class="section gallery">
             <h1>SUPERIOR</h1>
             <h2>POSEBNI TRENUCI KOJI DUGO OSTAJU U PAMĆENJU</h2>
             <div class="line"></div>
