--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -43,17 +43,17 @@
         <section class="hero">
             <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
             <div class="hero-content">
-                <h1>Veselimo se vasem javljanju!</h1>
+                <h1 class="h1-el-fnt">Veselimo se vašem javljanju!</h1>
             </div>
         </section>
         <section class="section contact">
-            <h1>Kontakt</h1>
+            <h1 class="h1-el-fnt">Kontakt</h1>
             <div class="contact-container">
                 <div class="contact-left">
                     <div class="adresa">
                         <div class="card-name">
                             <span class="line"></span>
-                            <p>Adresa</p>
+                            <p class="h2-el-fnt">Adresa</p>
                         </div>
                         <div class="card-info">
                             <p>Meneghetti Wine Hotel & Winery,</p>
@@ -62,7 +62,8 @@
                     </div>
                     <div class="rezervacije">
                         <div class="card-name">
-                            <p>Rezervacije i Informacije</p>
+                            <span class="line"></span>
+                            <p class="h2-el-fnt">Rezervacije i Informacije</p>
                         </div>
                         <div class="card-info">
                             <a href="tel:+385 52 528 800">+385 52 528 800</a>
@@ -72,7 +73,7 @@
                     <div class="informacije">
                         <div class="card-name">
                             <span class="line"></span>
-                            <p>Informacije o tvrtki</p>
+                            <p class="h2-el-fnt">Informacije o tvrtki</p>
                         </div>
                         <div class="card-info">
                             <p>Meneghetti d.o.o</p>
@@ -82,21 +83,20 @@
                     </div>
                 </div>
                 <div class="contact-right">
-                    <div class="footer-top">
-                        <div class="line"></div>
-                        <div class="email-form">
+                    <div class="contact-top">
+                        <div class="contact-email">
                             <p>PRIDRUŽITE SE KLUBU MENEGHETTI</p>
-                            <p>PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
+                            <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
                             <form action="post" target="_blank">
-                                <input type="text" placeholder="Email">
-                                <button type="submit" class="btn">Pridruzi se klubu!</button>
+                                <input type="text" placeholder="Email" class="mt">
+                                <button type="submit" class="btn mt">Pridruzi se klubu!</button>
                             </form>
                         </div>
                     </div>
-                    <div class="footer-down">
+                    <div class="contact-down">
                         <p>OSTANIMO U KONTAKTU</p>
-                        <p>PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
-                        <div class="social-networks">
+                        <p class="mt">PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
+                        <div class="social-networks mt">
                             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
                             <a href="#"><i class="fa-brands fa-youtube"></i></a>
