CSS Kontakt & Sredjen Footer

--- a/html/galerija/standard.html
+++ b/html/galerija/standard.html
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="footer-down">
-            <p>Sva prava zadržana</p>
+            <p>Sva prava zadržana © 2023</p>
         </div>
     </footer>
 </body>
