--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -85,7 +85,7 @@
                 <div class="contact-right">
                     <div class="contact-top">
                         <div class="contact-email">
-                            <p>PRIDRUŽITE SE KLUBU MENEGHETTI</p>
+                            <p class="fnt-w-b">PRIDRUŽITE SE KLUBU MENEGHETTI</p>
                             <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
                             <form action="post" target="_blank">
                                 <input type="text" placeholder="Email" class="mt">
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="contact-down">
-                        <p>OSTANIMO U KONTAKTU</p>
+                        <p class="fnt-w-b">OSTANIMO U KONTAKTU</p>
                         <p class="mt">PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
                         <div class="social-networks mt">
                             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="footer-down">
-            <p>Sva prava zadržana</p>
+            <p>Sva prava zadržana © 2023</p>
         </div>
     </footer>
 </body>
