--- a/html/restorani.html
+++ b/html/restorani.html
@@ -118,7 +118,7 @@
             </div>
         </div>
         <div class="footer-down">
-            <p>Sva prava zadržana</p>
+            <p>Sva prava zadržana © 2023</p>
         </div>
     </footer>
 </body>
