CSS Kontakt FINISH

--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -50,32 +50,32 @@
             <h1 class="h1-el-fnt">Kontakt</h1>
             <div class="contact-container">
                 <div class="contact-left">
-                    <div class="adresa">
+                    <div class="card">
                         <div class="card-name">
                             <span class="line"></span>
-                            <p class="h2-el-fnt">Adresa</p>
+                            <p class="h1-el-fnt ml-lg">Adresa</p>
                         </div>
-                        <div class="card-info">
+                        <div class="card-info fnt-w-l">
                             <p>Meneghetti Wine Hotel & Winery,</p>
                             <p>Stancija Meneghetti 1, 52211 Bale, Istria, Croatia</p>
                         </div>
                     </div>
-                    <div class="rezervacije">
+                    <div class="card mt">
                         <div class="card-name">
                             <span class="line"></span>
-                            <p class="h2-el-fnt">Rezervacije i Informacije</p>
+                            <p class="h1-el-fnt ml-lg">Rezervacije i Informacije</p>
                         </div>
-                        <div class="card-info">
-                            <a href="tel:+385 52 528 800">+385 52 528 800</a>
-                            <a href="mailto:reception@meneghetti.hr">reception@meneghetti.hr</a>
+                        <div class="card-info fnt-w-l">
+                            <a style="color: black;" href="tel:+385 52 528 800">+385 52 528 800</a>
+                            <a style="color: black;"  href="mailto:reception@meneghetti.hr">reception@meneghetti.hr</a>
                         </div>
                     </div>
-                    <div class="informacije">
+                    <div class="card mt">
                         <div class="card-name">
                             <span class="line"></span>
-                            <p class="h2-el-fnt">Informacije o tvrtki</p>
+                            <p class="h1-el-fnt ml-lg">Informacije o tvrtki</p>
                         </div>
-                        <div class="card-info">
+                        <div class="card-info fnt-w-l">
                             <p>Meneghetti d.o.o</p>
                             <p>Stancija Meneghetti 1, 52211 Bale, Hrvatska</p>
                             <p>OIB: 03413543055, MB: 4407938</p>
@@ -86,7 +86,7 @@
                     <div class="contact-top">
                         <div class="contact-email">
                             <p class="fnt-w-b">PRIDRUŽITE SE KLUBU MENEGHETTI</p>
-                            <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
+                            <p class="mt fnt-w-l">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
                             <form action="post" target="_blank">
                                 <input type="text" placeholder="Email" class="mt">
                                 <button type="submit" class="btn mt">Pridruzi se klubu!</button>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="contact-down">
                         <p class="fnt-w-b">OSTANIMO U KONTAKTU</p>
-                        <p class="mt">PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
+                        <p class="mt fnt-w-l">PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
                         <div class="social-networks mt">
                             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
