CSS Kontakt Finish

--- a/html/restorani.html
+++ b/html/restorani.html
@@ -42,6 +42,9 @@
     <main>
         <section class="hero">
             <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
+            <div class="hero-content">
+                <h1 class="h1-el-fnt">Bonanza preporuka restorana!</h1>
+            </div>
         </section>
         <section class="restaurants">
             <div class="restaurants-content">
@@ -61,7 +64,7 @@
                 <img src="https://meneghetti.hr/_nuxt/assets/img/restaurants-new/restaurant_newf80bb92.png" alt="" />
             </div>
         </section>
-        <section class="restaurants">
+        <section class="restaurants section-bg">
             <div class="restaurants-image">
                 <img src="https://meneghetti.hr/_nuxt/assets/img/restaurants-new/restaurant_newf80bb92.png" alt="" />
             </div>
