Some CSS and HTML changes

--- a/html/apartmani.html
+++ b/html/apartmani.html
@@ -43,7 +43,7 @@
             <div class="apartments-container">
                 <div class="container-wraper">
                     <div class="apartments-container-item apartment-item">
-                        <a href="apartmani/superior.html" class="apartment-image">
+                        <a href="apartmani/superior-apartment.html" class="apartment-image">
                             <img src="../images/apartment1.png" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Superior</p>
@@ -55,7 +55,7 @@
                         </a>
                     </div>
                     <div class="apartments-container-item apartment-item">
-                        <a href="apartmani/standard.html" class="apartment-image">
+                        <a href="apartmani/standard-apartment.html" class="apartment-image">
                             <img src="../images/apartment2.png" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Standard</p>
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                     <div class="apartments-container-item apartment-item">
-                        <a href="apartmani/studio.html" class="apartment-image">
+                        <a href="apartmani/studio-apartment.html" class="apartment-image">
                             <img src="../images/apartment3.png" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Studio</p>
