--- a/html/galerija.html
+++ b/html/galerija.html
@@ -42,6 +42,9 @@
     <main>
         <section class="hero">
             <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
+            <div class="hero-content">
+                <h1 class="h1-el-fnt">Jednostavno Bonanza.</h1>
+            </div>
         </section>
         <section class="section apartments">
             <div class="apartments-container">
