--- a/html/galerija/standard.html
+++ b/html/galerija/standard.html
@@ -77,7 +77,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer-bg">
         <div class="footer-top">
             <div class="footer-top-left">
                 <p class="fnt-w-b">OSTANIMO U KONTAKTU</p>
